footer fix bugs

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,7 +22,7 @@
             <div class="footer__block">
                 <div class="footer__store">
                     <p class="footer__title">Store</p>
-                    <ul class="footer__list">
+                    <ul class="footer__list-block">
                         <li class="footer__li link"><a class="footer__li-link" routerLink="/aboutus">About us</a></li>
                         <li class="footer__li"><a class="footer__li-link" routerLink="/news">News</a></li>
                         <li class="footer__li"><a class="footer__li-link" routerLink="contacts">Contacts</a></li>
