--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -47,6 +47,9 @@
         margin-right: 3.5rem;
     }
 }
+.footer__list-block {
+    display: block;
+}
 .footer__li {
     margin-bottom: 2.5rem;
 }
