--- a/src/app/Modules/registration/registration.component.html
+++ b/src/app/Modules/registration/registration.component.html
@@ -51,10 +51,11 @@
                     <label class="container__input-confirm" for="inputConfirm">Confirm password<span
                             class="container__star">*</span></label>
                 </div>
-                <div class="container__confirm">
-                    <input type="checkbox">
-                    <span class="container__text">I agree to the <a class="container__linking">processing of personal
-                            data</a></span>
+                <div class="container__checkbox">
+                    <input type="checkbox" id="inputCheckbox">
+                    <label for="inputCheckbox" class="container__input-checkbox">I agree to the </label><a
+                        class="container__linking">processing of
+                        personal data</a>
                 </div>
                 <button type="submit" class="container__button">Register</button>
             </form>
@@ -75,7 +76,7 @@
         </button>
         <button class="container__google">
             <img id="google" src="../../../assets/img-registration/flat-color-icons_google.png" alt="google">
-            <span class="container__signin">sign in with Google</span>
+            <span class="container__signin-google">sign in with Google</span>
         </button>
     </div>
 </div>
