--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -130,6 +130,7 @@
 }
 .user {
     position: absolute;
+    z-index: 2;
     top: 1rem;
     right: 0.5rem;
     background-color: $color_white;
@@ -137,7 +138,13 @@
     height: 18.1rem;
     margin: 3.3rem 0 2rem 3rem;
     box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
-    .user__li {
+    .user__li-1,
+    .user__li-2 {
+        display: none;
+        margin: 2.4rem 2rem;
+    }
+    .user__li-3,
+    .user__sign {
         margin: 2.4rem 2rem;
     }
     .user__text {
