--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -25,6 +25,7 @@ $color_gradientblue: linear-gradient(101.17deg, rgba(123, 97, 255, 0.2) 0%, rgba
 $color_lightdarkgrey: #bdbdbd;
 $color_darkgreen: #4a804a;
 $color_darklightgreen: #4a7f4a;
+$color_blue: #4867aa;
 %width {
     width: 4rem;
     height: 6rem;
