--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -26,6 +26,7 @@ $color_lightdarkgrey: #bdbdbd;
 $color_darkgreen: #4a804a;
 $color_darklightgreen: #4a7f4a;
 $color_blue: #4867aa;
+$color_red: #eb5757;
 %width {
     width: 4rem;
     height: 6rem;
